Back Port EDAC Changes
Back port the Linux EDAC driver for SNR.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/README
+++ b/README
@@ -261,6 +261,14 @@ db04264 from kernel.org
 Back ported ot Linux 4.19, with no changes, as
 SNR-0020-vfio-pci-Mask-buggy-SR-IOV-VF-INTx-support.patch
 
+EDAC, i10nm: Add a driver for Intel 10nm server processors
+----------------------------------------------------------
+
+d4dc89d from kernel.org
+
+Back ported ot Linux 4.19, with no changes, as
+SNR-0021-EDAC-i10nm-Add-a-driver-for-Intel-10nm-server-proces.patch
+
 
 Building the meta-intel-axxia BSP layer
 =======================================
