--- a/README
+++ b/README
@@ -458,8 +458,13 @@ NOTE: No preferred version should be set for linux-local provider.
     for Frio FPGA Emulation System:
     RUNTARGET = "frio"
 
-11.9 Add simicsfs-client support (for large and sim images). Sources tgz archive
-    should copied in meta-intel-axxia/downloads directory: simics-5.0.192.tgz
+11.9 Enable "multilib" support if desired.
+
+    require conf/multilib.conf
+
+11.10 Add simicsfs-client support (for large and sim images). Sources
+      tgz archive should copied in meta-intel-axxia/downloads directory:
+      simics-5.0.192.tgz
 
     DISTRO_FEATURES_append = " simicsfs"
 
@@ -470,22 +475,22 @@ NOTE: No preferred version should be set for linux-local provider.
     * 'cd ase/simics'
     * tar czf simics-5.0.192.tgz simics-5.0.192
 
-11.10 Add gcc9 support for a newer version of gcc and glibc instead
-    the default one from upstream. This should not normally be used!
+11.11 Add gcc9 support for a newer version of gcc and glibc instead
+      the default one from upstream. This should not normally be used!
 
     DISTRO_FEATURES_append = " gcc9"
 
-11.11 Set the serial console depending on the bios you are using.
-    Default is ttyS4, but some old bios use ttyS5 or ttyS6.
+11.12 Set the serial console depending on the bios you are using.
+      Default is ttyS4, but some old bios use ttyS5 or ttyS6.
 
     SNR_SERIAL_CONSOLE = "ttyS5"
 
-11.12 Other optional settings for saving disk space and build time:
+11.13 Other optional settings for saving disk space and build time:
    
    DL_DIR = "/(some-shared-location)/downloads"
    SSTATE_DIR = "/(some-shared-location)/sstate-cache
 
-11.13 Examples.
+11.14 Examples.
 
      See http://www.yoctoproject.org/docs/2.3/mega-manual/mega-manual.html
      for complete documentation on the Yocto build system.
