--- a/README
+++ b/README
@@ -283,6 +283,18 @@ commit removes all changes made to tools/perf by the previous commits.
 This back-port is only for the Linux driver.  To get a list of core
 and uncore registers, use 'perf list'.
 
+pinctrl: intel: Avoid potential glitches if pin is in GPIO mode
+---------------------------------------------------------------
+
+This change to the pinctrl (gpio) driver starts with the current state
+when enabling a pin instead of setting the pin to input.  Upstream in
+progress at
+
+https://lore.kernel.org/linux-gpio/20191014095104.77689-1-andriy.shevchenko@linux.intel.com/raw
+
+Back ported as
+SNR-0067-pinctrl-intel-Avoid-potential-glitches-if-pin-is-in-.patch
+
 
 Building the meta-intel-axxia BSP layer
 =======================================
