Enable multilib via DISTRO_FEATURES
Create multilib distro feature which will be enabled from
local.conf via DISTRO_FEATURES mechanism.
It will add multilib settings from upstream conf/multilib.conf
and also will add some lib32 version for some packages in all
axxia images

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/README
+++ b/README
@@ -510,7 +510,7 @@ NOTE: No preferred version should be set for linux-local provider.
 
 11.10 Enable "multilib" support if desired.
 
-    require conf/multilib.conf
+    DISTRO_FEATURES_append = " multilib"
 
 11.11 Add simicsfs-client support (for large and sim images). Sources
       tgz archive should copied in meta-intel-axxia/downloads directory:
