meta-environment: Create external-modules-setup script
Create and deploy with the SDK a simple bash script which prepare
the kernel sources deployed in SDK through kernel-devsrc package
to build external modules.

Basically, it run clean, oldconfig, scripts and tools/objtool Makefile
targets for each kernel tree deployed in $SDKTARGETSYSROOT/lib/modules.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/README
+++ b/README
@@ -626,16 +626,11 @@ After the installation completes, do the following.
 14.1 Optional Linux Module Tools Update
 
 If external Linux modules need to be buildable after installing the
-SDK, the Linux kernel sources need to be updated as follows.  Note
-that this needs to be done for all four kernels!
+SDK, the Linux kernel sources need to be updated as follows, using the
+external-modules-setup.sh script which is deployed with the SDK.
 
 source (install directory)/environment-setup*
-cd $SDKTARGETSYSROOT/lib/modules
-
-Then, for each Linux kernel directory, run the following in the
-'build' directory inside the Linux kernel directory.
-
-make clean oldconfig scripts tools/objtool
+./(install directory)/external-modules-setup.sh
 
 The SDK should contain all you need to run the above. In case the Linux
 build fails because of missing packages on the host, be sure you have
