--- a/README
+++ b/README
@@ -537,10 +537,10 @@ NOTE: No preferred version should be set for linux-local provider.
     * 'cd ase/simics'
     * tar czf simics-5.0.195.tgz simics-5.0.195
 
-11.12 Add gcc9 support for a newer version of gcc and glibc instead
-      the default one from upstream. This should not normally be used!
+11.12 Add gcc8 support for the previous version of gcc and glibc
+      instead of the default which is gcc9.
 
-    DISTRO_FEATURES_append = " gcc9"
+    DISTRO_FEATURES_append = " gcc8"
 
 11.13 Set the serial console depending on the bios you are using.
       Default is ttyS4, but some old bios use ttyS5 or ttyS6.
