axxia-image-vcn: Install modules for alternative kernels
By default, only the modules for the preferred virtual/kernel are
instaled in rootfs. With this commit, we'll Install also the modules
for alternative kernels.

A side effect is that the rootfs size for a axxia-image-vcn image
grows from 3.5G to 4.03G and exeeds the FAT32 limit size. That's why
we can't support hddimg rootfs type which is based on FAT32:

ERROR: axxia-image-vcn-1.0-r0 do_bootimg:
       axxia-image-vcn-1.0/hddimg/rootfs.img rootfs size is greather
       than or equal to 4GB, and this doesn't work on a FAT filesystem.
       You can either: 1) Reduce the size of rootfs.img, or, use wic,
       vmdk or vdi instead of hddimg

B0179 - Only the "Main" Kernel has Modules in the RFS

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/README
+++ b/README
@@ -494,17 +494,13 @@ NOTE: No preferred version should be set for linux-local provider.
    
    The kernel which is set as virtual/kernel provider will be installed
    as usual in the deploy directory of the build. Alternative kernels
-   will be installed in deploy directory under separate folders having
-   the following template name: kernel-<PN>. 
+   with their modules will be installed in deploy directory under separate
+   folders having the following template name: kernel-<PN>. 
    
-   Alternative kernels will be also installed in rootfs on /boot directory.
+   Alternative kernels will be also installed in rootfs on /boot directory
+   and the modules for all kernels in /lib/modules/<KENREL_VERSION>.
    Kernels can be swhitch by recreating the bzImage symlink in /boot.
    Default is the kernel set as preferred provider for virtual/kernel.
-
-   Note that kernel modules archives should be deployed for each kernel
-   version as we do for virtual/kernel provider. Archives with kernel
-   modules are found in each separate folder (kernel-<PN>) from deploy
-   directory of the build.
 
    If don't want to build alternative kernels, just reset the following
    variable in local.conf:
